2009-05-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* configure.ac, src/util/Makefile.am, src/util/hd-volume-profile.[ch]:
	New code for tracking device profiles and volume level for system
	sounds.
	* src/util/hd-transition.c (hd_transition_play_sound): Check the
	profile before playing a sound. Remove unneeded 'is_playing' tracking,
	libcanberra handles that for us. Fixes: NB#96619

	* src/mb/hd-wm.c (hd_wm_determine_current_app): Avoid using
	g_return_val_if_fail by using the for loop's condition.

	Release 2.2.50

	Revert Thomas' fix for NB#116866 because it hides Tasks button when
	going from fullscreen to non-fullscreen.

2009-05-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Plug a leak spotted by Valgrind.

	* src/home/hd-task-navigator.c (create_appthumb): Do not connect the
	win_changed callback here because it's now done in reset_thumb_title.
	(free_thumb): Disconnect possible win_changed callback.
	(reset_thumb_title): Reset win_changed callback.

	Patch from Laszlo Pere to fix NB#114750.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client): Check the
	render manager state when a window is unmapped. If we are in
	STATE_IS_APP() and the current app is the desktop we have to go to
	HDRM_STATE_TASK_NAV.

2009-05-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-title-bar.c:  Treat fullscreen windows as though
	they had no decor for the purposes of figuring out button
	visibility.  Also, hide the switcher button if we're dealing
	with an ordinary client (rather than, say, the desktop).
	Fixes NB#116866.

2009-05-20  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#117109 - Contact list background visible in portrait mode

	* src/util/hd-util.c: Update blur state after the screen rotation in
	order to make sure that the windows that were blurred previously are
	still blurred. In this case the background will be white during the 
	screen rotation transition unless clutter >= 0.8.2-0maemo32 is used.