@@ -100,7 +100,7 @@ typedef enum
                     HDRM_STATE_HOME_EDIT | HDRM_STATE_HOME_EDIT_DLG | \
                     HDRM_STATE_LAUNCHER | HDRM_STATE_TASK_NAV)
 
-#define STATE_NEED_GRAB(s) \
+#define STATE_NEED_WHOLE_SCREEN_INPUT(s) \
   STATE_ONE_OF((s), HDRM_STATE_LAUNCHER | HDRM_STATE_TASK_NAV | \
                     HDRM_STATE_HOME_EDIT)
 
