@@ -1735,7 +1735,7 @@ hd_comp_mgr_map_notify (MBWMCompMgr *mgr, MBWindowManagerClient *c)
     {
       /* If we're in a state that needs a grab,
        * go back to home as the dialog will need the grab. */
-      if (STATE_NEED_GRAB(hd_render_manager_get_state()))
+      if (STATE_NEED_WHOLE_SCREEN_INPUT(hd_render_manager_get_state()))
         hd_render_manager_set_state(HDRM_STATE_HOME);
       return;
     }
